--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: willmonteiro/gerenciador-tarefas:01
+          tags: docker push willmonteiro/gerenciador-tarefas:02
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -206,7 +206,7 @@ jobs:
          --health-timeout=10s \
          --health-retries=3 \
          --health-start-period=40s \
-         willmonteiro/gerenciador-tarefas:01
+         docker push willmonteiro/gerenciador-tarefas:02
          EOF
 
       - name: Verificar aplicação
