--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -200,7 +200,7 @@ jobs:
          --health-timeout=10s \
          --health-retries=3 \
          --health-start-period=40s \
-         docker push willmonteiro/gerenciador-tarefas:04
+          willmonteiro/gerenciador-tarefas:04
          EOF
 
       - name: Verificar aplicação
